<resources>
    <string name="app_name">LinkTask</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="please_check_your_internet_connection">Please Check you internet connection</string>
    <string name="map_fragment_open_gps">Please open Gps</string>
    <string name="map_fragment_yes">Enable Gps</string>
    <string name="map_fragment_no">No Gps</string>
    <string name="life_chat">Life chat</string>
    <string name="explore">Explore</string>
    <string name="e_magazine">E-Magazine</string>
    <string name="wish_list">Wish List</string>
    <string name="welcome">Welcome</string>
    <string name="link_user">Abd alla Maged Shawky</string>
    <string name="search">Search</string>
    <string name="by">By :</string>
    <string name="open_web_site">Open website</string>
    <string name="error_open_webpage">No application can handle this request. Please install a web browser or check your
        URL.
    </string>
</resources>
