<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="@dimen/nav_header_height"
        android:background="@color/white"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:gravity="bottom" android:id="@+id/linearLayout">

    <ImageView
            android:layout_width="65dp"
            android:layout_height="75dp"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            app:srcCompat="@mipmap/ic_launcher_round"
            android:contentDescription="@string/nav_header_desc"
            android:id="@+id/imageView"
            android:layout_marginStart="8dp"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatImageButton android:layout_width="54dp"
                                                    android:layout_height="69dp"
                                                    app:layout_constraintEnd_toEndOf="parent"
                                                    android:layout_marginEnd="8dp"
                                                    android:layout_marginRight="8dp"
                                                    app:layout_constraintStart_toEndOf="@+id/textView2"
                                                    app:layout_constraintBottom_toBottomOf="parent"
                                                    android:layout_marginStart="8dp"
                                                    android:layout_marginLeft="8dp"
                                                    android:layout_marginTop="8dp"
                                                    app:srcCompat="@drawable/ic_forward"
                                                    android:background="@color/transparent"
                                                    app:layout_constraintTop_toTopOf="parent"
                                                    app:layout_constraintHorizontal_bias="1.0"
                                                    android:id="@+id/appCompatImageButton"
                                                    app:layout_constraintVertical_bias="0.52"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="@string/welcome"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:id="@+id/textView2"
            android:textColor="@color/gray700"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toEndOf="@+id/imageView"
            android:layout_marginStart="8dp" android:layout_marginLeft="8dp"
            app:layout_constraintHorizontal_bias="0.007" app:layout_constraintVertical_bias="0.392"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/link_user"
            android:id="@+id/textView"
            android:textColor="@color/black"
            android:textSize="@dimen/title_sub_head_mid"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="2dp" app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.0" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/appCompatImageButton" android:layout_marginRight="8dp"
            app:layout_constraintStart_toEndOf="@+id/imageView" android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp" app:layout_constraintHorizontal_bias="0.02"/>

</androidx.constraintlayout.widget.ConstraintLayout>
